--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/sjmcclure2/Red-X#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "knex": "^1.0.7",
-    "nodemon": "^2.0.15"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
   }
 }
