--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/sjmcclure2/Red-X#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "knex": "^1.0.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.1.2"
   }
 }
