--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.1.2"
+    "@faker-js/faker": "^6.1.2",
+    "msw": "^0.39.2"
   }
 }
